# The-Third-Element-2

./: main.py  pyproject.toml
Game/: __init__.py  chest.py  const.py  enemy.py  fade.py  fight.py  maps.py  message.py  player.py  sound.py  story.py  treasure.py
resources/: credits.py
